[package]
name = "auto-renewal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "offline"] }
argh = "0.1.10"
reqwest = { version = "0.11.14", features = ["json"] }
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"] }
dotenvy = "0.15.6"
tracing = "0.1.37"
cid = "0.10.1"
